Fix lower bound image overflow in person-circle
In people's circle, the image was being shown a bit below the lower
bound. This trick is a bit nasty, but fixes the problem.

--- a/src/sass/shared/variables.scss
+++ b/src/sass/shared/variables.scss
@@ -452,5 +452,5 @@ $transition-main-time: .3s;
 $transition-main-effect: ease-in;
 
 // Borders
-$border-width-person-card: 4px;
+$border-width-person-card: 5px;
 $border-person-card: $border-width-person-card solid $color-lightest-grey;
